Change home page, init under construction version of website

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,8 +32,8 @@
   <div class="article-author-side">
     {% include _author-bio.html %}
   </div>
-  <div id="index">
-    <h3><a href="{{ site.url}}/posts/">Recent Posts</a></h3>
+<!--  <div id="index">
+    <h3><a href="{{ site.url}}/home/">Recent Posts</a></h3>
     {% for post in site.posts limit:5 %}    
     <article>
       {% if post.link %}
@@ -45,7 +45,7 @@
     </article>
     {% endfor %}
   </div><!-- /#index -->
-</div><!-- /#main -->
+</div><!-- /#main --> -->
 
 <div class="footer-wrap">
   <footer>
