--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -73,5 +73,25 @@
 
 {% include _scripts.html %}	        
 
+{% if page.comments %}
+<div id="disqus_thread"></div>
+<script>
+/* * * Configuration variables * * */
+var discus_config () {
+    this.page.url = "http://dieuwkehupkes.nl{{ page.url }}";
+    this.page.identifier = "{{ page.id }}";
+};
+(function() {
+    var d = document, s = d.createElement('script');
+
+    s.src = '//dieuwkehupkes-nl.disqus.com/embed.js';
+
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+{% endif %}
+
 </body>
 </html>
