Change website url

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -78,7 +78,7 @@
 <script>
 /* * * Configuration variables * * */
 var discus_config () {
-    this.page.url = "http://dieuwkehupkes.nl{{ page.url }}";
+    this.page.url = "http://dieuwkehupkes.github.io{{ page.url }}";
     this.page.identifier = "{{ page.id }}";
 };
 (function() {
