--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,7 +77,7 @@
 <div id="disqus_thread"></div>
 <script>
 /* * * Configuration variables * * */
-var discus_config () {
+var discus_config function () {
     this.page.url = "http://dieuwkehupkes.github.io{{ page.url }}";
     this.page.identifier = "{{ page.id }}";
 };
