--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,6 +54,9 @@
 </div><!-- /.footer-wrap -->
 
 {% include _scripts.html %}
-  
+{% if jekyll.environment == 'production' %}
+{% include analytics.html}  
+{% endif %}
+
 </body>
 </html>
