--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -63,6 +63,9 @@
 </div><!-- /.footer-wrap -->
 
 {% include _scripts.html %}
+{% if jekyll.environment == 'production' %}
+{% include analytics.html %}}  
+{% endif %}
   
 </body>
 </html>
