--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -93,5 +93,9 @@ var discus_config function () {
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 {% endif %}
 
+{% if jekyll.environment == 'production' %}
+{% include analytics.html %}
+{% endif %}
+
 </body>
 </html>
