--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -54,6 +54,10 @@
 </div><!-- /.footer-wrap -->
 
 {% include _scripts.html %}          
+{% if jekyll.environment == 'production' %}
+{% include analytics.html %}
+{% endif %}
+
 
 </body>
 </html>
