--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -78,13 +78,13 @@
 <script>
 /* * * Configuration variables * * */
 var discus_config function () {
-    this.page.url = "http://dieuwkehupkes.github.io{{ page.url }}";
+    this.page.url = "http://dieuwkehupkes.nl{{ page.url }}";
     this.page.identifier = "{{ page.id }}";
 };
 (function() {
     var d = document, s = d.createElement('script');
 
-    s.src = '//dieuwkehupkes-nl.disqus.com/embed.js';
+    s.src = '//dieuwke.disqus.com/embed.js';
 
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
